--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
     <title>login page</title>
@@ -7,13 +7,14 @@
 <body>
 <div>
     <form action="/login" method="post">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
         <h2>log in</h2>
         <label for="username">username</label>
         <input type="text" id="username" name="username" placeholder="username">
-
+        <br/>
         <label for="password">password</label>
         <input type="text" id="password" name="password" placeholder="password">
-
+        <br/>
         <input type="submit" value="login">
     </form>
 </div>
